--- a/simplefoc20_stm32f405_adc_sample/MDK-ARM/stm32f405rgt/stm32f405rgt.build_log.htm
+++ b/simplefoc20_stm32f405_adc_sample/MDK-ARM/stm32f405rgt/stm32f405rgt.build_log.htm
@@ -22,11 +22,12 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 D:\Coding\MCU_Develop\simplefoc20_stm32f405_adc_sample\MDK-ARM\stm32f405rgt.uvprojx
-Project File Date:  08/07/2025
+Project File Date:  08/08/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'stm32f405rgt'
+compiling BLDCDriver6PWM.cpp...
 compiling user_main.cpp...
 linking...
 Program Size: Code=31624 RO-data=1276 RW-data=232 ZI-data=8800  
